--- a/gt.html
+++ b/gt.html
@@ -22,7 +22,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG"
+        <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.png"
             aria-current="page" href="#" alt="Newgames"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
