--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page"
+        <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.png" aria-current="page"
             href="#" alt="logo-newsgames"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
